# DCS-World-AH-64D-Rudder-Assist

./: CMakeLists.txt  README.md  build_windows.bat  config.ini
lua/: ah64d_auto_rudder_export.lua
src/: app.cpp  collective_drive.cpp  collective_drive.h  config.cpp  config.h  f14_roll_assist.cpp  f14_roll_assist.h  main.cpp  power_feedforward.cpp  power_feedforward.h  retro_music_guard.cpp  retro_music_guard.h  retro_toggle.cpp  retro_toggle.h  retro_xm_player.cpp  retro_xm_player.h  rudder_input.cpp  rudder_input.h  tune_session.cpp  tune_session.h  yaw_damper.cpp  yaw_damper.h
src/windows/: directinput_axis.cpp  directinput_axis.h  fast_export_udp_client.cpp  fast_export_udp_client.h  resource.h  retro_resources.rc  vjoy_device.cpp  vjoy_device.h  xinput_axis.cpp  xinput_axis.h
tests/: test_main.cpp
